--- a/src/App.css
+++ b/src/App.css
@@ -42,19 +42,39 @@
 }
 
 .lexer-container {
+  width: 100%;
   display: flex;
   flex-direction: column;
   gap: 10px;
+  align-items: center;
+}
+
+button {
+  width: 324px;
 }
 
 .lexer-content {
   display: flex;
   gap: 10px;
+  width: 100%;
+}
+
+.tokens {
+  padding: 10px;
+  padding-right: 20px;
+  border-right: 1px solid;
+  width: 300px;
+}
+
+.errors {
+  padding: 10px;
+  width: 410px;
 }
 
 textarea {
   background-color: #0000;
-  height: 100px;
+  width: 300px;
+  height: 150px;
   padding: 10px;
   border-radius: 5px;
   font-size: 0.9rem;
